added index and style

--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-  <!-- added after achange -->
- </head>
- <body>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <header>
-        <h1>Dev1010000</h1>
+        <h1>DEV101</h1>
         <nav>
             <ul>
-                <li> 
-                    <a href="">HTML</a>
-                </li>
-                <li><a href="">CSS</a></li>
-                <li><a href="">Javascript in english</a></li>
+                <li><a href="">HTML5</a></li>
+                <li><a href="">CSS3</a></li>
+                <li><a href="">JavaScript</a></li>
             </ul>
         </nav>
     </header>
-   <br>
-    <img src="img/icon.jpeg" alt="icon" class="main"> 
-   <section>
-     <div class="parent">
-        <div class="child">
-          <img src="img/Html.png" alt="" srcset="">
-          <h2>HTML</h2>
-          <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil voluptatem, velit in assumenda accusantium odio reiciendis commodi voluptatibus at iure.</p>
+    <img src="lap.jpeg" class="main-img">
+    <main>
+        <!-- flexbox -->
+        <div class="parent">
+            <div class="child">
+                <img src="html.png" alt="">
+                <h2>HTML</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, maiores obcaecati corrupti
+                    cum, est animi nobis magni </p>
+            </div>
+            <div class="child">
+                <img src="css.png" alt="">
+                <h2>CSS3</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, maiores obcaecati corrupti
+                    cum, est animi nobis magni </p>
+            </div>
+            <div class="child">
+                <img src="icon.png" alt="">
+                <h2>JavaScript</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, maiores obcaecati corrupti
+                    cum, est animi nobis magni </p>
+            </div>
         </div>
-        <div class="child">
-            <img src="img/css.png" alt="">
-            <h2>CSS</h2>
-            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et voluptates saepe aspernatur non maiores debitis mollitia. Enim quae eum quam!</p>
-        </div>
-        <div class="child">
-            <img src="img/js.png" alt=""> 
-            <h2>CSS</h2>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus totam saepe aspernatur voluptates cupiditate, rem sit dolorum aliquid suscipit hic!</p>
-    </div>
-     </div>
-   </section>
-   <style>
-    
-   </style>
-   <footer class = "footer-parent">
-        <div class = "footer-content"> &#169;pepcoding 20k22 </div>  
-   </footer>
- </body>
- </html>
+    </main>
+    <footer class="footer_parent">
+        <div class="footer_content">
+             &#169;Pepcoding 20k22</div>
+    </footer>
+</body>
+
+</html>
